tests/fixtures/invalid/bytes_mul_bytes.py
# Cannot multiply Bytes and Bytes
x: bytes = b"hello" * b"hello"
